--- a/application-datasource-dev.yml
+++ b/application-datasource-dev.yml
@@ -1,6 +1,6 @@
 spring:
-  #profiles:
-    #active: dev
+  profiles:
+    active: dev
   datasource:
     druid:
       url: jdbc:mysql://localhost:3306/sme?useSSL=false&serverTimezone=GMT%2B8&useSSL=false
