--- a/ishow-user-consumer.yml
+++ b/ishow-user-consumer.yml
@@ -3,7 +3,7 @@ server:
   #servlet:
     #context-path: /ishow-user-consumer
 spring:
-  profiles:
-    active: dev
+  #profiles:
+    #active: dev
   application:
     name: ishow-user-consumer
