--- a/ishow-user-provider.yml
+++ b/ishow-user-provider.yml
@@ -7,10 +7,10 @@ spring:
     active: dev
   application:
     name: ishow-user-provider
-management:
-  server:
-    servlet:
-      context-path: /ishow-user-provider
+#management:
+  #server:
+    #servlet:
+      #context-path: /ishow-user-provider
 info:
   app:
     name: ishow-user-provider
