--- a/ishow-user-provider-database.yml
+++ b/ishow-user-provider-database.yml
@@ -3,7 +3,7 @@ spring:
     active: dev
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/sme?useSSL=false&serverTimezone=GMT%2B8&useSSL=false
+      url: jdbc:mysql://localhost:3306/ishow?useSSL=false&serverTimezone=GMT%2B8&useSSL=false
       username: root
       password: root
       driverClassName: com.mysql.cj.jdbc.Driver
